feat: add comment deletion
